--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 spring.application.name=uranai
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:./data/uranai-db
+#render.com用にコメントアウト　spring.h2.console.enabled=true
+#render.com用にコメントアウト　spring.datasource.url=jdbc:h2:file:./data/uranai-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.h2.console.path=/h2-console
+#render.com用にコメントアウト　spring.h2.console.path=/h2-console
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+#render.com用にコメントアウト　spring.jpa.hibernate.ddl-auto=update
+#↓render.com用、"none"でschema.sqlでcreateTable
+spring.jpa.hibernate.ddl-auto=none
+# ↓スキーマとデータの初期化を有効化（schema.sql と data.sql を実行）
+spring.sql.init.mode=always
 
 server.address=0.0.0.0
